--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -201,7 +201,7 @@
           <!--<div class="col-md-8">-->
             <!--<article class="product-review">-->
               <!--<div class="product-review-author">-->
-                <!--<%= image_tag 'theme_img/70x70.png', alt: '' %>-->
+                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
               <!--</div>-->
               <!--<div class="product-review-content-full">-->
                 <!--<h5 class="product-review-title">Terrific Buy!</h5>-->
@@ -231,7 +231,7 @@
             <!--</article>-->
             <!--<article class="product-review">-->
               <!--<div class="product-review-author">-->
-                <!--<%= image_tag 'theme_img/70x70.png', alt: '' %>-->
+                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
               <!--</div>-->
               <!--<div class="product-review-content-full">-->
                 <!--<h5 class="product-review-title">Too Big. Unusable.</h5>-->
@@ -261,7 +261,7 @@
             <!--</article>-->
             <!--<article class="product-review">-->
               <!--<div class="product-review-author">-->
-                <!--<%= image_tag 'theme_img/70x70.png', alt: '' %>-->
+                <!--<%#= image_tag 'theme_img/70x70.png', alt: '' %>-->
               <!--</div>-->
               <!--<div class="product-review-content-full">-->
                 <!--<h5 class="product-review-title">Worth it</h5>-->
