--- a/app/views/customer/enquiries/index.html.erb
+++ b/app/views/customer/enquiries/index.html.erb
@@ -184,6 +184,7 @@
                         <% end %>
                     <% end %>
                 <%else%>
+                    <div class="gap"></div>
                     <h2 class="text-center">No Enquiry Available</h2>
                 <%end%>
 
@@ -210,6 +211,7 @@
                         <% end %>
                     <% end %>
                 <%else%>
+                    <div class="gap"></div>
                     <h2 class="text-center">No Quote Available</h2>
                 <%end%>
               </div>
@@ -235,6 +237,7 @@
                         <% end %>
                     <% end %>
                 <%else%>
+                    <div class="gap"></div>
                     <h2 class="text-center">No Confirm Enquiry Available</h2>
                 <%end%>
 
