--- a/app/views/customer/welcome/profile.html.erb
+++ b/app/views/customer/welcome/profile.html.erb
@@ -6,7 +6,7 @@
             <%= image_tag @customer.image(:size_250x250), class: 'img-responsive' %>
             <%#= link_to 'Remove', 'profile_image', method: :delete, data: {confirm: "Are you sure?"}  %>
         <% else %>
-            <%= image_tag "theme_img/500x500.png", class: 'img-responsive' %>
+            <%= image_tag "theme_img/no-photo.png", class: 'img-responsive' %>
         <% end %>
         <%= form_tag customer_update_profile_image_path, class: 'upload-form', method: :put, multipart: true do %>
             <%= file_field_tag :image, accept:'image/*', class: 'upload-img' %>
