--- a/app/views/customer_mailer/service_un_verified.html.erb
+++ b/app/views/customer_mailer/service_un_verified.html.erb
@@ -1,39 +1,75 @@
-Hi <%= @user.name %>,
-<br>
-<br>
-This message refers to the ad: <%= @service.service_description %> of <%= "Service#{@service.name}"%>.
-<br>
-<br>
-<strong>Your ad contains prohibited a prohibited item or content</strong>
-<br><br>
-At ByeBuying, for legal and ethical reasons, we do not allow certain items or services. This policy ensures all our users have a safe, secure and delightful experience.
-<br>
-<br>
-
-<strong>Here is a list of some of the products & services ByeBuying does not allow:</strong>
-<br>
-Drugs, weapons, and items of an obscene or erotic nature
-<br>
-Cigarettes, tobacco products and alcoholic beverages
-<br>
-Pharmaceutical products, medical devices that are under government regulation
-<br>
-Human organs or any other human parts
-<br>
-Stolen goods, hacked or pirated goods, robbery or other services considered criminal
-<br>
-Goods that do not exist or that you do not own
-<br>
-Animals that are protected by law.
-<br>
-Paid sexual services
-<br>
-Services that offer writing of thesis or master's papers or any falsification of documents.
-
-<br><br>
-Please review our Terms of Use for complete posting rules and information.
-Thank you for using ByeBuying!
-<br><br>
-Kind Regards,
-<br>
-ByeBuying Team
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1" style="">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              This message refers to the ad: <%= @service.service_description %> of <%= "Service#{@service.name}"%>.
+            </p>
+            <br>
+            <p>
+              <strong>Your ad contains prohibited a prohibited item or content</strong>
+            </p>
+            <br>
+            <p>
+              At ByeBuying, for legal and ethical reasons, we do not allow certain items or services. This policy ensures all our users have a safe, secure and delightful experience.
+            </p>
+            <br>
+            <p>
+              <strong>Here is a list of some of the products & services ByeBuying does not allow:</strong>
+            </p>
+            <br>
+            <p>
+              Drugs, weapons, and items of an obscene or erotic nature
+            </p>
+            <br>
+            <p>
+              Cigarettes, tobacco products and alcoholic beverages
+            </p>
+            <br>
+            <p>
+              Pharmaceutical products, medical devices that are under government regulation
+            </p>
+            <br>
+            <p>
+              Human organs or any other human parts
+            </p>
+            <br>
+            <p>
+              Stolen goods, hacked or pirated goods, robbery or other services considered criminal
+            </p>
+            <br>
+            <p>
+              Goods that do not exist or that you do not own
+            </p>
+            <br>
+            <p>
+              Animals that are protected by law.
+            </p>
+            <br>
+            <p>
+              Paid sexual services
+            </p>
+            <br>
+            <p>
+              Services that offer writing of thesis or master's papers or any falsification of documents.
+            </p>
+            <br>
+            <p>
+              Please review our Terms of Use for complete posting rules and information. <br>
+              Thank you for using ByeBuying!
+            </p>
+            <br>
+            <p>
+              Kind Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
