--- a/app/views/customer_mailer/forgot_password.html.erb
+++ b/app/views/customer_mailer/forgot_password.html.erb
@@ -1,5 +1,22 @@
-Hi <%= @user.name %>
-<br>
-<br>
-Your password is updated. New password - <%= @password %>
-<br>
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1" style="">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              Your password is updated. New password - <%= @password %>
+            </p>
+            <br>
+            <p>
+              Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
