--- a/app/views/customer_mailer/product_quoted.html.erb
+++ b/app/views/customer_mailer/product_quoted.html.erb
@@ -1,16 +1,29 @@
-Hi <%= @user.name %>,
-<br>
-<br>
-Congratulations..!!!
-<br>
-<br>
-You enquiry made on Ad Product#<%=@product.id%> <%= "& #{@product.description}" if @product.description.present? %> dated: <%= @quote.start_at.strftime(time_format)%> to <%= @quote.end_at.strftime(time_format)%>.has been accepted by the owner.
-Please login into your account on <a href="http://www.byebuying.com/customer/enquiries/<%=@quote.id%>">www.ByeBuying.com</a> and make DEAL or NO DEAL.
-Please note the offer to be accepted within 24 Hours from the time this email is generated.
-In case you cannot see this email properly, please login and visit the enquiry section in your account section.
-
-<br>
-<br>
-Regards,
-<br>
-ByeBuying Team
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1" style="">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              Congratulations!!!
+            </p>
+            <br>
+            <p>
+              You enquiry made on Ad Product#<%=@product.id%> <%= "& #{@product.description}" if @product.description.present? %> dated: <%= @quote.start_at.strftime(time_format)%> to <%= @quote.end_at.strftime(time_format)%>.has been accepted by the owner.
+              Please login into your account on <a href="http://www.byebuying.com/customer/enquiries/<%=@quote.id%>">www.ByeBuying.com</a> and make DEAL or NO DEAL.
+              Please note the offer to be accepted within 24 Hours from the time this email is generated.
+              In case you cannot see this email properly, please login and visit the enquiry section in your account section.
+            </p>
+            <br>
+            <p>
+              Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
