--- a/app/views/customer_mailer/service_enquiry.html.erb
+++ b/app/views/customer_mailer/service_enquiry.html.erb
@@ -1,32 +1,58 @@
-Hi <%= @user.name %>,
-<br>
-<br>
-You have received one enquiry from <%= @enquiry.user.name %> on your service having Ad Service#<%= @service.id %> and <%= @enquiry.description %>. Enquiry details are as:
-<br><br>
-Ad ID: Enquiry#<%= @enquiry.id %>
-<br>
-Ad Description: <%= @service.service_description %>
-<br>
-Enquired by: <%= @enquiry.user.name %>
-<br>
-Enquired on: <%= @enquiry.created_at.strftime(time_format)%>
-<br>
-Service required for duration: <%= @enquiry.start_at.strftime(time_format)%> to <%= @enquiry.end_at.strftime(time_format)%>
-<br>
-Price requested per hour: <%= @enquiry.expected_per_hour_price %>
-<br>
-Price requested per day : <%= @enquiry.expected_per_day_price %>
-<br>
-Price requested per week : <%= @enquiry.expected_per_week_price %>
-<br>
-Price requested per month : <%= @enquiry.expected_per_month_price %>
-<br><br>
-
-Please login into your account on <a href="http://byebuying.com">www.ByeBuying.com</a> and provide your approval. Please note the enquiry will remain active for 48 Hours from the time it is generated.
-<br><br>
-In case you cannot see this email properly, please login and visit the enquiry section in your account section.
-<br>
-<br>
-Regards,
-<br>
-ByeBuying Team
+<table class="outer" align="center">
+  <tr>
+    <td class="one-column">
+      <table width="100%">
+        <tr>
+          <td class="inner contents">
+            <p class="h1" style="">Hi <%= @user.name %>,</p>
+            <br>
+            <p>
+              You have received one enquiry from <%= @enquiry.user.name %> on your service having Ad Service#<%= @service.id %> and <%= @enquiry.description %>. Enquiry details are as:
+            </p>
+            <br>
+            <p>
+              Ad ID: Enquiry#<%= @enquiry.id %>
+            </p>
+            <p>
+              Ad Description: <%= @service.service_description %>
+            </p>
+            <p>
+              Enquired by: <%= @enquiry.user.name %>
+            </p>
+            <p>
+              Enquired on: <%= @enquiry.created_at.strftime(time_format)%>
+            </p>
+            <p>
+              Service required for duration: <%= @enquiry.start_at.strftime(time_format)%> to <%= @enquiry.end_at.strftime(time_format)%>
+            </p>
+            <p>
+              <%= "Price Requested Per Hour: #{@enquiry.expected_per_hour_price}" if @enquiry.expected_per_hour_price > 0%>
+            </p>
+            <p>
+              <%= "Price Requested Per Day: #{@enquiry.expected_per_day_price}" if @enquiry.expected_per_day_price > 0%>
+            </p>
+            <p>
+              <%= "Price Requested Per Week: #{@enquiry.expected_per_week_price}" if @enquiry.expected_per_week_price > 0%>
+            </p>
+            <p>
+              <%= "Price Requested Per Month: #{@enquiry.expected_per_month_price}" if @enquiry.expected_per_month_price > 0%>
+            </p>
+            <br>
+            <p>
+              Please login into your account on <a href="http://byebuying.com">www.ByeBuying.com</a> and provide your approval. Please note the enquiry will remain active for 48 Hours from the time it is generated.
+            </p>
+            <br>
+            <p>
+              In case you cannot see this email properly, please login and visit the enquiry section in your account section.
+            </p>
+            <br>
+            <p>
+              Regards,<br>
+              ByeBuyingTeam
+            </p>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
