--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -92,7 +92,7 @@
                 <div class="col-md-11 col-sm-10 col-xs-12">
                   <div class="row">
                     <div class="col-sm-8 col-xs-12">
-                      <h5 class="product-name"><%= service.id %></h5>
+                      <h5 class="product-name"><%= service.service_description %></h5>
                       <p class="location"><%= service.state.name %></p>
                     </div>
                     <div class="col-sm-4 col-xs-12 text-right">
