--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -164,6 +164,7 @@
               <p class="product-page-side-text">* Except remote areas</p>
               <p class="product-page-side-text">You have one month from the shipping confirmation email.</p>
             </div>
+            <%= link_to 'View all Post of this seller', all_user_path(@service.user_id), class: 'btn seller_post_button btn-primary' %>
           </div>
         </div>
       </div>
