--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -30,7 +30,7 @@
       <div class="product-caption-price">
                     <span class="product-caption-price-new">
                       <i class="fa fa-inr"></i>
-                      <%= product.per_hour_price %>
+                      <%= product.per_hour_price > 0 ?  product.per_hour_price : ( product.per_day_price > 0 ?  product.per_day_price : ( product.per_week_price > 0 ?  product.per_week_price : ( product.per_month_price > 0 ?  product.per_month_price : 0 ))) %>
                     </span>
       </div>
     </div>
