--- a/app/views/customer/products/index.html.erb
+++ b/app/views/customer/products/index.html.erb
@@ -64,7 +64,7 @@
                     </div>
                   </div>
                   <div class="col-md-10 col-sm-9 col-xs-12">
-                    <h2 class="heading"><%= product.name %></h2>
+                    <h2 class="heading"><%= product.name.capitalize %></h2>
                     <span>Status: <%= product.admin_verified ? 'Approved' : 'Pending' %></span>
                     <h5 class="time-option"><%= product.start_at.strftime(time_format) %> - <%= product.end_at.strftime(time_format) %></h5>
                     <p class="description"><%= product.description %></p>
