--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -1,14 +1,14 @@
 <div class="customer-main-show">
   <div class="row">
     <div class="white-bg">
-      <div class="col-sm-6 col-xs-12">
+      <div class="col-sm-4 col-xs-12">
         <div class="add-image-con">
           <div class="row">
             <div class="col-xs-12">
               <div class="img-overflow">
                 <% @product.product_images.each do |product_image| %>
                     <span class="img-con">
-                      <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img' %>
+                      <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img img-responsive' %>
                       <% if product_image.id.present? %>
                           <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
                               <i class="fa fa-times cross-icon"></i>
@@ -27,7 +27,7 @@
           <% end %>
         </div>
       </div>
-      <div class="col-sm-6 col-xs-12">
+      <div class="col-sm-8 col-xs-12">
         <div class="row">
           <div class="col-xs-12">
             <h2>DETAIL</h2>
