--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -165,7 +165,7 @@
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
                     <!--starting @ -->
-                    ₹<%= product.per_hour_price > 0 ?  product.per_hour_price : ( product.per_day_price > 0 ?  product.per_day_price : ( product.per_week_price > 0 ?  product.per_week_price : ( product.per_month_price > 0 ?  product.per_month_price : 0 ))) %>
+                    ₹ <%= product.per_hour_price > 0 ?  "#{product.per_hour_price}/Hour " : ( product.per_day_price > 0 ?  "#{product.per_day_price}/Day" : ( product.per_week_price > 0 ? "#{product.per_week_price}/Week" : ( product.per_month_price > 0 ?  "#{product.per_month_price}/Month" : 0 ))) %>
                     <%# if product.per_hour_price.present? %>
                         <!--Per Hr-->
                     <%# else if product.per_day_price.present? %>
@@ -251,8 +251,7 @@
                       <div class="product-caption-price">
                   <span class="product-caption-price-new">
                     <!--starting @ -->
-                    ₹<%#= service.per_hour_price %>
-                    <%= service.per_hour_price > 0 ?  service.per_hour_price : ( service.per_day_price > 0 ?  service.per_day_price : ( service.per_week_price > 0 ?  service.per_week_price : ( service.per_month_price > 0 ?  service.per_month_price : 0 ))) %>
+                    ₹ <%= service.per_hour_price > 0 ?  "#{service.per_hour_price}/Hour " : ( service.per_day_price > 0 ?  "#{service.per_day_price}/Day" : ( service.per_week_price > 0 ? "#{service.per_week_price}/Week" : ( service.per_month_price > 0 ?  "#{service.per_month_price}/Month" : 0 ))) %>
                   </span>
 
                       </div>
@@ -275,6 +274,7 @@
         $('.custome-filter-block .set-max-price').val("<%= params[:max_price].present? ?  params[:max_price] : @max_price %>")
         $('.custome-filter-block .set-quantity').val("<%= params[:quantity].present? ?  params[:quantity] : 0 %>")
         $('.custome-filter-block .set-rating').val("<%= params[:rating].present? ?  params[:rating] : 1 %>")
+
     });
 
 </script>
