--- a/app/views/customer/services/show.html.erb
+++ b/app/views/customer/services/show.html.erb
@@ -6,16 +6,20 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="img-overflow overflow-servic-img">
-                <% @service.service_images.each do |service_image| %>
-                <span class="img-con">
-                  <%= image_tag service_image.image.url(ServiceImage::DEFAULT_SIZE), class: 'upload-img img-responsive' %>
-                  <% if service_image.id.present? %>
-                      <%= link_to customer_service_service_image_path(@service, service_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                          <i class="fa fa-times cross-icon"></i>
-                      <%- end %>
-                  <%- end %>
-                </span>
-                <%- end %>
+                <%if @service.service_images.any? %>
+                    <% @service.service_images.each do |service_image| %>
+                        <span class="img-con">
+                          <%= image_tag service_image.image.url(ServiceImage::DEFAULT_SIZE), class: 'upload-img img-responsive' %>
+                          <% if service_image.id.present? %>
+                              <%= link_to customer_service_service_image_path(@service, service_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                                  <i class="fa fa-times cross-icon"></i>
+                              <%- end %>
+                          <%- end %>
+                        </span>
+                    <%- end %>
+                <% else %>
+                    <%= image_tag 'theme_img/500x500.png', class: 'img-responsive' %>
+                <% end %>
               </div>
             </div>
           </div>
