--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -6,7 +6,8 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="img-overflow">
-                <% @product.product_images.each do |product_image| %>
+                <% if @product.product_images.any? %>
+                    <% @product.product_images.each do |product_image| %>
                     <span class="img-con">
                       <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img img-responsive' %>
                       <% if product_image.id.present? %>
@@ -15,7 +16,10 @@
                           <%- end %>
                       <%- end %>
                     </span>
-                <%- end %>
+                    <%- end %>
+                <% else %>
+                    <%= image_tag 'theme_img/500x500.png', class: 'img-responsive' %>
+                <% end %>
               </div>
             </div>
           </div>
@@ -52,7 +56,7 @@
                       <h4>Gender:</h4>
                     </div>
                     <div class="col-xs-7">
-                      <p><%= @product.gender %></p>
+                      <p><%= @product.gender.present? ? @product.gender : 'NA' %></p>
                     </div>
                   </div>
                 </div>
@@ -125,7 +129,7 @@
                   <h4>Location:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.location %></p>
+                  <p><%= @product.location.present? ? @product.location : 'NA' %></p>
                 </div>
               </div>
             </div>
@@ -161,7 +165,7 @@
                   <h4>Quantity:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><%= @product.quantity %></p>
+                  <p><%= @product.quantity.present? ? @product.quantity : 'NA' %></p>
                 </div>
               </div>
             </div>
@@ -224,7 +228,14 @@
                   <h4>Refundable security:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.refundable_security %></p>
+                  <p>
+                    <% if @product.refundable_security.present? %>
+                        <i class="fa fa-inr" aria-hidden="true"></i>
+                        <%= @product.refundable_security %>
+                    <% else %>
+                        NA
+                    <% end %>
+                  </p>
                 </div>
               </div>
             </div>
@@ -236,7 +247,14 @@
                   <h4>Cost of replacement:</h4>
                 </div>
                 <div class="col-xs-7">
-                  <p><i class="fa fa-inr" aria-hidden="true"></i> <%= @product.cost_of_replacement %></p>
+                  <p>
+                    <% if @product.cost_of_replacement.present? %>
+                        <i class="fa fa-inr" aria-hidden="true"></i>
+                        <%= @product.cost_of_replacement %>
+                    <% else %>
+                        NA
+                    <% end %>
+                  </p>
                 </div>
               </div>
             </div>
@@ -247,13 +265,13 @@
           <div class="col-xs-12">
             <div class="product-detail">
               <h4>Description:</h4>
-              <p><%= @product.description %></p>
+              <p><%= @product.description.present? ? @product.description : 'NA' %></p>
             </div>
           </div>
           <div class="col-xs-12">
             <div class="product-detail">
               <h4>Technical Specification:</h4>
-              <p><%= @product.technical_specification %></p>
+              <p><%= @product.technical_specification.present? ? @product.technical_specification : 'NA' %></p>
             </div>
           </div>
 
@@ -295,7 +313,7 @@
           <div class="col-xs-12">
             <div class="product-detail">
               <h4>Others:</h4>
-              <p><%= @product.other %></p>
+              <p><%= @product.other.present? ? @product.other : 'NA' %></p>
             </div>
           </div>
         </div>
